--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "electron-angular",
   "version": "0.0.0",
+  "main": "app/main.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm-run-all -p electron:serve ng:serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "ng:serve": "ng serve",
+    "electron:serve-tsc": "tsc -p tsconfig.serve.json",
+    "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && electron . --serve",
     "test": "ng test"
   },
   "private": true,
@@ -23,17 +27,21 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.2",
+    "@angular-devkit/build-angular": "^13.2.5",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "electron": "^17.1.0",
+    "electron-reload": "^2.0.0-alpha.1",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "npm-run-all": "^4.1.5",
+    "typescript": "~4.5.2",
+    "wait-on": "^6.0.1"
   }
 }
